[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logiclock"
version = "0.1.0"
description = "Logic lock"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "flake8>=7.0,<8",
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]
